tests/baselines/reference/asyncFunctionDeclaration12_es5.errors.txt
asyncFunctionDeclaration12_es5.ts(1,24): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== asyncFunctionDeclaration12_es5.ts (1 errors) ====
    var v = async function await(): Promise<void> { }
                           ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.